# trading-notes-app

./: Makefile  README.md  pyproject.toml
app/: settings.py  urls.py
notes/: admin.py  models.py
notes/migrations/: 0001_initial.py  0002_trade_lot_size.py  0003_alter_trade_points_result.py  0004_trade_dollars_result_currency_and_more.py
