[tool.poetry]
name = "trading-notes-app"
version = "1"
description = "Trading Journal built with Django."
authors = ["Diego Leal"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
django-rest-framework = "^0.1.0"
drf-yasg = "^1.21.7"
django-cors-headers = "^4.3.1"
ruff = "^0.1.6"
black = "^23.11.0"
isort = "^5.12.0"
pillow = "^10.1.0"
django-money = "^3.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
